2007-06-19  Valentin Todorov  <valentin.todorov@chello.at>

    * R/covMcd.R: usage of simulated finite sample correction factors fixed:
    * - case p=1 fixed
    * - simulated corrections used only when the Pison et.al. 
    *   formula is definitely wrong (negative or very large)
2007-06-09  Martin Maechler  <maechler@stat.math.ethz.ch>

    * tests/lmrob-data.R, *.Rout.save: new consistency tests for lmrob()

    * R/biweight-funs.R (tukeyPsi1, tukeyChi): renamed from
    lmrob.Psi() and lmrob.Chi();  also renamed
    * man/tukeyPsi1.Rd, man/tukeyChi.Rd: updated, also mentioning "psiFunc"

    * src/lmrob.c (rwls): now controlling *relative* error in MM
    iterations, i.e., convergence happens when  ||b1 - b2|| < eps * ||b1||.
    The above 'eps' is now part of lmrob.control() instead of
    hard-wired in C code.

    * R/lmrob.MM.R (lmrob.MM): new argument 'trace.lev'
    * src/robustbase.h (R_lmrob_MM): add trace_lev argument

2007-06-08  Martin Maechler  <maechler@stat.math.ethz.ch>

    * src/lmrob.c (refine_fast_s): slight change in warning()
    [make message nicer for future R >= 2.5.1]

2007-04-21  Martin Maechler  <maechler@stat.math.ethz.ch>

    * R/ltsReg.R: replace 'quan' by 'h' internally
    * R/covMcd.R: ditto

    * R/covMcd.R (h.alpha.n): renamed from "quan.f"() and now exported:
    * NAMESPACE: and hence
    * man/h.alpha.n.Rd: documented, and linked to from here
    * man/ltsReg.Rd, man/covMcd.Rd:

2007-04-18  Valentin Todorov  <valentin.todorov@chello.at>

    * R/covMcd.R: use simulated finite sample correction factors {FIXME!}

2007-04-11  Martin Maechler  <maechler@stat.math.ethz.ch>

    * R/ltsReg.R (ltsReg.default): 'ans$X' now has "intercept first"
    to match coefficient vector.
    * R/ltsReg.R (summary.lts): no need to reorder 'R' (cholesky) anymore

2007-04-02  Valentin Todorov  <valentin.todorov@chello.at>

    * R/covMcd.R: the (repeated) calculation of the consistency