@@ -1,6 +1,6 @@
 Package: robustbase
 Version: 0.2-8
-Date: 2007-04-..
+Date: 2007-06-20
 Title: Basic Robust Statistics
 Author: Original code by many authors, notably
 	Peter Rousseeuw and Christophe Croux, see file 'Copyrights';
